# Panther

./: .gitignore  Cargo.toml  README.md  build.rs  run_gradle.sh  run_gradle_precompiled.sh  run_x.sh  settings.gradle.kts
.cargo/: config.toml
app/: build.gradle.kts
app/src/androidTest/java/com/skygrel/panther/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/skygrel/panther/: LocationHelper.java  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/skygrel/panther/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: app.rs  lib.rs
src/render/: fonts.rs  images.rs  mod.rs
src/render/objects/: animated-image-frag.glsl  animated_image.rs  box-frag.glsl  box.rs  common-box-vert.glsl  image-frag.glsl  image-vert.glsl  image.rs  mod.rs  start-animation-frag.glsl  start_animation.rs  tab-frag.glsl  tab.rs  textbox-frag.glsl  textbox-vert.glsl  textbox.rs
src/render/screens/: active_training.rs  main.rs  mod.rs  paused_screen.rs  present-frag.glsl  present-vert.glsl  records.rs  stats.rs
src/render/utils/: circle_animation.rs  mod.rs  position.rs
